# Creation date: 2026.03.01
# Copyright (c) 2026 Youcef Lemsafer
# SPDX-License-Identifier: MIT

[package]
name = "sendcipher-common"
version = "0.1.0"
edition = "2024"
description = "Common types for the public API at sendcipher.com"
license = "MIT"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.17.0"
serde_json = "1.0.149"
