# Creation date: 2026.03.01
# Copyright Youcef Lemsafer, all rights reserved.

[package]
name = "sc-common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.17.0"
serde_json = "1.0.149"
